# autonomous-mini-rover-ros2

./: Dockerfile  INSTALLATION.md  README.md  docker-compose.yml
src/external_sensors/: package.xml  setup.py  setup.py.backup
src/external_sensors/config/: external_sensors.yaml
src/external_sensors/external_sensors/: __init__.py  external_imu_publisher.py  external_imu_publisher.py.backup  gps_publisher.py
src/external_sensors/launch/: external_sensors.launch.py
src/rover_gps/: package.xml  pyproject.toml  setup.cfg  setup.py  setup.py.backup
src/rover_gps/launch/: complete_rover_system.launch.py  gps_driver.launch.py  minimal_gps_system.launch.py
src/rover_gps/rover_gps/: gps_nav_service.py  gps_navigation.py  minimal_gps_cli.py  minimal_gps_controller.py
src/rover_gps/rover_gps/data/: __init__.py
src/rover_gps/rover_gps/gui/: .rover_control_gui_final.py.swp  ackermann_rover_gui.py  ackermann_rover_gui_complete.py  fixed_gps_reader.py  gps_waypoint_widget.py  rover_waypoints_20251002_135248.csv  rover_waypoints_20251002_135248.json  safe_rover_controller.py  simple_rover_test.py  start_gps_fixed.sh
src/rover_gps/rover_gps/rover_control/: ackermann_handler.py  fused_waypoint_recorder.py  gps_handler.py  gps_waypoint_widget.py  indoor_nav_tester.py  indoor_rover_waypoints_20251016_135509.csv  indoor_rover_waypoints_20251021_132040.csv  indoor_rover_waypoints_20251021_132040.json  indoor_waypoint_navigator.py  indoor_waypoint_recorder.py  lidar_safety_diagnostic.py  lidar_safety_monitor.py  main_gui.py  main_guiv2.py  path_utils.py  ros_interface.py  ros_interface.py.backup  ros_interface.py.backup2  safety_manager.py  sensor_fusion.py  sensor_fusion_handler.py  start_autonomous.sh  test_indoor_nav.py  test_waypoint_distance.py  virtual_joystick.py  waypoint_navigator.py  waypoint_navigator.py.backup
src/rover_gps/rover_gps/tests/: conftest.py  (+2 more)
src/rover_gps/scripts/: find_gps_port.py
(+30 files in other folders)
