[metadata]
name = rover_gps
version = 0.0.0
description = GPS package for rover
author = ubuntu
author_email = ubuntu@todo.todo
license = TODO: License declaration

[options]
packages = find:
install_requires =
    setuptools
zip_safe = True
include_package_data = True

[options.packages.find]
include = rover_gps*

[options.package_data]
rover_gps.data.waypoints = *.json, *.csv

[options.data_files]
share/ament_index/resource_index/packages = resource/rover_gps
share/rover_gps = package.xml
share/rover_gps/launch = launch/*.launch.py

[options.entry_points]
console_scripts =
    gps_navigation = rover_gps.gps_navigation:main
    gps_nav_service = rover_gps.gps_nav_service:main
    minimal_gps_controller = rover_gps.minimal_gps_controller:main
    minimal_gps_cli = rover_gps.minimal_gps_cli:main
    rover_control_gui = rover_gps.gui.rover_control_gui:main

[flake8]
max-line-length = 100
extend-ignore =
    E203,
    W503
